--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,8 @@
-langchain==0.0.267
-streamlit==1.25.0
-transformers==4.31.0
-torch==2.0.1
-einops==0.6.1
-bitsandbytes==0.41.1
-accelerate==0.21.0
-pdfminer.six==20221105
-bs4==0.0.1
-sentence_transformers
-duckdb==0.7.1
-chromadb==0.3.26
-beautifulsoup4==4.12.2
+streamlit==1.27.0
+PyMuPDF==1.22.5
+faiss-cpu==1.7.4
 sentence-transformers==2.2.2
-sentencepiece==0.1.99
-six==1.16.0
 requests==2.31.0
-uvicorn==0.18.3
-torch==2.0.1
-torchvision==0.15.2
-streamlit-chat
+mistralai==0.0.6
+numpy==1.26.5
+pickle5==0.0.12
