--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-streamlit==1.27.0
-PyMuPDF==1.22.5
-faiss-cpu==1.7.4
-sentence-transformers==2.2.2
-requests==2.31.0
-mistralai==0.0.6
-numpy==1.26.5
-pickle5==0.0.12
+streamlit
+PyMuPDF
+faiss-cpu
+sentence-transformers
+requests
+pandas
+matplotlib
+speechrecognition
+pydub
+mistralai
+streamlit-lottie
+moviepy
+ibm-watsonx
+yt-dlp
+
