--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-streamlit
-PyMuPDF
-faiss-cpu
-sentence-transformers
-requests
-pandas
-matplotlib
-speechrecognition
-pydub
-mistralai
-streamlit-lottie
-moviepy
-ibm-watsonx
-yt-dlp
+streamlit==1.27.0
+PyMuPDF==1.22.5
+faiss-cpu==1.7.4
+sentence-transformers==2.2.2
+requests==2.31.0
+pandas==2.1.0
+matplotlib==3.8.0
+speechrecognition==3.9.0
+pydub==0.27.0
+mistralai==0.1.6
+streamlit-lottie==0.1.3
+moviepy==1.0.3
+ibm-watsonx==1.0.0
+yt-dlp==2025.8.14
+
+
 
