--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core
 streamlit==1.27.0
 PyMuPDF==1.22.5
 faiss-cpu==1.7.4
@@ -5,13 +6,22 @@ sentence-transformers==2.2.2
 requests==2.31.0
 pandas==2.1.0
 matplotlib==3.8.0
+
+# Audio & Voice
 speechrecognition==3.9.0
-pydub==0.27.0
-mistralai==0.1.6
-streamlit-lottie==0.1.3
+pydub
+
+# Animation
 moviepy==1.0.3
-ibm-watsonx==1.0.0
+
+# AI Models
+mistralai==0.1.6
+
+# UI & Extras
+streamlit-lottie==0.1.3
 yt-dlp==2025.8.14
+
+
 
 
 
