--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+pip>=25.2
+
 # Core
 streamlit==1.27.0
 PyMuPDF==1.22.5
 faiss-cpu==1.7.4
 sentence-transformers==2.2.2
 requests==2.31.0
-pandas==2.1.0
+pandas==2.0.3
+
 matplotlib==3.8.0
 
 # Audio & Voice
@@ -20,6 +23,7 @@ mistralai==0.1.6
 # UI & Extras
 streamlit-lottie==0.1.3
 yt-dlp==2025.8.14
+
 
 
 
