--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,21 @@
-pip>=25.2
+# Core Streamlit
+streamlit>=1.27.0
 
-# Core
-streamlit==1.27.0
-PyMuPDF==1.22.5
-faiss-cpu==1.7.4
-sentence-transformers==2.2.2
-requests==2.31.0
-pandas==2.0.3
+# PDF processing
+PyMuPDF>=1.22.5
 
-matplotlib==3.8.0
+# Vector search
+faiss-cpu>=1.7.4
 
-# Audio & Voice
-speechrecognition==3.9.0
-pydub
+# NLP & embeddings
+sentence-transformers>=2.2.2
+mistralai>=0.1.0
 
-# Animation
-moviepy==1.0.3
-
-# AI Models
-mistralai==0.1.6
-
-# UI & Extras
-streamlit-lottie==0.1.3
-yt-dlp==2025.8.14
-
-
-
-
-
-
+# Utilities
+requests>=2.31.0
+pandas>=2.0.3
+matplotlib>=3.8.0
+pydub>=0.26.0
+speechrecognition>=3.9.0
+moviepy>=2.0.0
+streamlit-lottie>=0.1.4
